# Main_levi_launcher-project

./: Android Build  README.md
.github/workflows/: android-build.yml  android.yml
app/: .gitignore  build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/inbuiltmods/: CMakeLists.txt
app/src/main/cpp/inbuiltmods/src/common/: transition.cpp  transition.h
app/src/main/cpp/inbuiltmods/src/snaplook/: snaplook.cpp
app/src/main/cpp/inbuiltmods/src/zoom/: zoom.cpp
app/src/main/cpp/preloader/: CMakeLists.txt
app/src/main/res/anim/: popup_in.xml  popup_out.xml  qa_item_fade_in_up.xml  qa_layout_animation.xml  slide_in_top.xml
app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml
app/src/main/res/drawable/: bg_beta_badge.xml  bg_close_button.xml  bg_corner_handle.xml  bg_debug_badge.xml  bg_dialog_config.xml  bg_edit_text.xml  bg_genuine_unverified.xml  bg_glow_cyan.xml  bg_glow_green.xml  bg_logo_glow.xml  bg_mod_menu_fab.xml  bg_mod_menu_toggle.xml  bg_mod_status_disabled.xml  bg_mod_status_enabled.xml  bg_notification_progress.xml  bg_orbit_dot.xml  bg_orbit_ring.xml  bg_overlay_button.xml  bg_overlay_button_active.xml  bg_popup_menu_square.xml  bg_remove_button.xml  bg_search_box.xml  bg_spinner.xml  card_background_small.xml  chick_idle_1.xml  chick_idle_2.xml  chick_run_1.xml  chick_run_2.xml  (+39 more)
app/src/main/res/drawable-night/: bg_popup_menu_rounded.xml  bg_rounded_card.xml  bg_third_level_item.xml  card_background.xml  card_background_small.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+179 files in other folders)
